remove escapeChars from SQL Component